--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 .page {
-    background-color: #ffffff;
+    background-color: lightgray;
+    position: relative;
+    width: 900pt;
+    height: 675pt;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.nav-links {
+    gap: 2rem;
+    list-style: none;
+    font-size: 1.5rem;
 }
