--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 .page {
     background-color: lightgray;
     position: relative;
@@ -6,10 +8,87 @@
     text-align: left;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: auto;
 }
 
 .nav-links {
     gap: 2rem;
     list-style: none;
     font-size: 1.5rem;
+    display: flex;
 }
+
+.header {
+    color: blue;
+    /* padding: 40px 0; */
+    margin-bottom: 0;
+    /* text-align: center; */
+}
+
+/* .header h1 {
+    color: white;
+    margin: 0;
+    padding: 0;
+    font-size: 24px;
+    margin-bottom: 0;
+} */
+
+h1 {
+    font-size: 36px;
+    margin: 0;
+    line-height: 1.2;
+}
+
+h2 {
+    font-size: 24px;
+    margin: 10px 0;
+}
+
+.nav {
+    float: right;
+    justify-content: space-around;
+    align-items: center;
+    /* font-size: 17vh; */
+}
+
+.nav a {
+    color: black;
+    text-decoration: none;
+    margin: 0 15 px;
+    font-size: 18 px;
+    font-weight: bold;
+}
+
+.nav a:hover {
+    text-decoration: underline;
+}
+
+.body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f5f5f5;
+    display: block;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+img {
+    display: inline-block;
+    /* float: left; */
+    /* margin-right: 10px; */
+}
+
+h3 {
+    color: #7393B3;
+}
+
+/* .div#e18 {
+    position: absolute;
+    left: 164.25pt;
+    top: 10.5pt;
+    width: 225pt;
+    height:57.75pt;
+} */
