fixed home page and added test pages

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-
 .page {
     background-color: lightgray;
     position: relative;
@@ -59,6 +57,12 @@ h2 {
     font-weight: bold;
 }
 
+.nav {
+    background-color: lightblue;
+    color: white;
+    padding: 10px;
+}
+
 .nav a:hover {
     text-decoration: underline;
 }
@@ -76,9 +80,20 @@ html {
 }
 
 img {
-    display: inline-block;
-    /* float: left; */
-    /* margin-right: 10px; */
+    /* display: inline-block; */
+    /* float: left;
+    margin-right: 10px; */
+}
+
+.images-container {
+display: flex;
+justify-content: space-between;
+margin-bottom: 20px;
+}
+
+.images-container img {
+    max-width: 100%;
+    height: auto;
 }
 
 h3 {
